[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.29"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
